# haskell-timsort

./: .gitignore  .travis.yml  LICENSE  README.md  TODO.md  benchs.html  timsort.cabal
benchmarks/: Benchmarks.hs
src/Data/Array/: InsertionSort.hs  TimSort.hs
src/Data/Vector/Algorithms/: Tim.hs
test/: Properties.hs  TestSuite.hs
vector-algorithms-benchmarks/: Main.hs
