Name:                timsort
Version:             0.1
Synopsis:            An adaptive, stable, natural mergesort implemented on mutable vectors.
-- Description:         
Homepage:            https://github.com/timjb/haskell-timsort
License:             MIT
License-file:        LICENSE
Author:              Tim Baumann
Maintainer:          tim@timbaumann.info
Category:            Data
Build-type:          Simple
Cabal-version:       >= 1.10


Library
  Ghc-options:         -Wall
  Default-language:    Haskell2010
  Hs-source-dirs:      src
  Exposed-modules:     Data.Vector.Algorithms.Tim
  Build-depends:       base >= 4 && < 5,
                       vector >= 0.9.1 && < 0.11,
                       primitive,
                       vector-algorithms >= 0.5.4 && < 0.7
  
Test-Suite timsort-tests
  Ghc-options:         -Wall
  Default-language:    Haskell2010
  Hs-source-dirs:      src test
  Main-is:             TestSuite.hs
  Type:                exitcode-stdio-1.0
  Build-depends:       base,
                       vector,
                       primitive,
                       vector-algorithms,
                       QuickCheck >= 2.5.1.1 && < 3,
                       test-framework,
                       test-framework-quickcheck2

Benchmark timsort-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -O2
  hs-source-dirs:      benchmarks
  Default-language:    Haskell2010
  Main-is:             Benchmarks.hs
  Build-depends:       base,
                       timsort,
                       criterion,
                       vector,
                       vector-algorithms,
                       QuickCheck,
                       primitive,
                       deepseq

Benchmark vector-algorithms-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -O2
  hs-source-dirs:      vector-algorithms-benchmarks
  Default-language:    Haskell2010
  Main-is:             Main.hs
  Build-depends:       base,
                       vector,
                       vector-algorithms,
                       mwc-random,
                       mtl,
                       timsort
